# AIR-AIRuntime

./: .gitignore  CMakeLists.txt  README.md  config_workflow.json
config/: config.inl
include/common/: common.h  common.inl
include/models/: algorithmBase.h  modelCls.h  modelDet.h  opt.h
include/process/: letterbox.h  resizeNormalize.h
include/structSet/: networkSpace.h  workflow.h
include/utils/: loadJsonConfig.h  runtime.h
include/workflow/: workflowBase.h
proto/: task_exchange.grpc.pb.h  task_exchange.pb.h  task_exchange.proto
src/: runtime.cc
src/models/: algorithmBase.cc  modelCls.cc  modelDet.cc
src/process/: letterbox.cc  resizeNormalize.cc
src/utils/: loadJsonConfig.cc
src/workflow/: workflowBase.cc
three_party/: build_grpc.sh
